# softgear

./: .gitignore  README.md  cli.py  evaluate.py  pretrain.py  pyproject.toml
configs/: config.yaml
configs/data/: arc.yaml  sudoku.yaml
configs/model/: softgear.yaml  trm.yaml
configs/training/: default.yaml
data/sudoku-4x4/: download.py
data/sudoku-extreme/: download.py
notebooks/: exp1-hardening.ipynb  exp2-ablation.ipynb  exp3-curriculum.ipynb  exp4-scale.ipynb  train_softgear.ipynb
src/data/: sudoku.py
src/models/: adaptive_halt.py  analyzer.py  base.py  chain.py  gear.py  gear_chain.py  softgear.py  sudoku_model.py
src/softgear/: __main__.py  cli.py  config.py
src/softgear/models/: analyzer.py  chain.py  gear.py
src/softgear/tasks/: __init__.py  registry.py
src/softgear/tasks/sudoku/: __init__.py  data.py  download.py  metrics.py  model.py  spec.py
src/softgear/training/: differential_ema.py  progressive_depth.py  trainer.py
src/tasks/: sudoku.py
src/training/: deep_supervision.py  differential_ema.py  progressive_depth.py  trainer.py
tests/: test_adaptive_halt.py  test_deep_supervision.py  test_differential_ema.py  test_e2e_smoke.py  test_gear.py  test_gear_chain.py  test_pipeline.py  test_progressive_depth.py  test_softgear.py  test_sudoku_data.py  test_sudoku_metrics.py
tests/models/: test_analyzer.py  test_chain.py  test_gear.py
tests/tasks/sudoku/: test_data.py  test_metrics.py  test_model.py
tests/training/: test_differential_ema.py  test_progressive_depth.py
