[project]
name = "softgear"
version = "0.1.0"
description = "Learnable Asymmetric Gear Chains for Structured Reasoning"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.2",
    "omegaconf>=2.3.0",
    "pandas>=3.0.1",
    "torch>=2.10.0",
    "transformers>=5.2.0",
    "typer>=0.24.1",
    "wandb>=0.25.0",
]

[project.scripts]
softgear = "cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src", "cli.py"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["slow: slow integration tests (deselected by default)"]
addopts = "-m 'not slow'"

[dependency-groups]
dev = [
    "black>=26.1.0",
    "huggingface-hub>=1.5.0",
    "pytest>=9.0.2",
    "pytest-timeout>=2.4.0",
]
